2006-07-31  Kazuhiko  <kazuhiko@fdiary.net>
	* hikiconf.rb.sample, hiki/command.rb, hiki/config.rb,
	misc/plugin/bbs.rb, misc/plugin/comment.rb, misc/plugin/its.rb:
	add '@conf.use_session' to prevent spams.

	* style/default/hikidoc.rb: sync with hikidoc rev.38.
	  support nested modifier (reported by MoonWolf).

2006-07-21  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
	* hiki/page.rb, misc/hikifarm/index.cgi, misc/plugin/referer.rb,
	misc/plugin/trackback.rb: check request_method exactly.

	* hiki/storage.rb: use Array#reverse_each instead of reverse.each.

2006-07-03  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/trackback.rb (trackback): use SCRIPT_FILENAME
	instead of SCRIPT_NAME.

	* data/text/TextFormattingRules: add explanations about
	multi-lines pre-formatted text and description-only text.

2006-07-02  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/command.rb (dispatch), hiki/config.rb: raise an error if
	timeout exceeds.
	* hikiconf.rb.sample, misc/i18n/hikiconf.rb.sample.en: add
	'@timeout'.

2006-06-06  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/docdiff/view.rb: sync to docdiff-0.3.3.

2006-06-01  Kazuhiko  <kazuhiko@fdiary.net>
	* plugin/00default.rb (saveconf_theme): fix a bug that raises an
	exception when setting a wrong theme_path (closes #64).

2006-04-28  Kazuhiro NISHIYAMA <zn@mbf.nifty.com>
	* hiki/db/ptstore.rb (fetch): merge from pstore.rb in ruby 1.8.4.

2006-03-15  Kouhei Yanagita <yanagi@shakenbu.org>
	* hiki/config.rb (mobile_agent?): support WILLCOM's mobile agents (closes #57).

2006-02-27  Kouhei Yanagita <yanagi@shakenbu.org>
	* hiki/plugin.rb (cookie_path): fix the bug of breaking the path of the cookie
	when base_url is specified (closes #56).

2006-02-18  Kouhei Yanagita <yanagi@shakenbu.org>
	* misc/plugin/show_plugins.rb: add a comment.

2006-02-15  Kouhei Yanagita <yanagi@shakenbu.org>
	* plugin/02help.rb (set_s): support Safari (patch by NAGASAKI).

2006-02-04  Kazuhiro NISHIYAMA <zn@mbf.nifty.com>